// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fast Fact Card Component renders with link when provided 1`] = `
<div>
  



  <div
    class="ct-fast-fact-card ct-theme-light ct-fast-fact-card--card-clickable "
  >
    
        
            
    <div
      class="ct-fast-fact-card__title"
    >
      
                  
      <a
        class="ct-fast-fact-card__title-link"
        href="https://example.com"
      >
        Fast Fact Title
      </a>
      
              
    </div>
    
      
            


    <div
      class="ct-paragraph ct-theme-light ct-paragraph--large  ct-fast-fact-card__summary"
    >
      
    This is a summary of the fast fact.  
    </div>
          
  </div>
  

</div>
`;

exports[`Fast Fact Card Component renders with optional attributes 1`] = `
<div>
  



  <div
    class="ct-fast-fact-card ct-theme-dark ct-fast-fact-card--card-clickable custom-class"
    data-test="true"
  >
    
            
    <div
      class="ct-fast-fact-card__image"
    >
      
        

  
      <img
        alt="Image description"
        class="ct-image ct-theme-dark "
        src="https://example.com/image.jpg"
      />
      
      
    </div>
    
      
            
    <div
      class="ct-fast-fact-card__title"
    >
      
                  
      <a
        class="ct-fast-fact-card__title-link"
        href="https://example.com"
        target="_blank"
      >
        Fast Fact Title
      </a>
      
              
    </div>
    
      
            


    <div
      class="ct-paragraph ct-theme-dark ct-paragraph--large  ct-fast-fact-card__summary"
    >
      
    This is a summary of the fast fact.  
    </div>
          
  </div>
  

</div>
`;

exports[`Fast Fact Card Component renders with required attributes 1`] = `
<div>
  



  <div
    class="ct-fast-fact-card ct-theme-light  "
  >
    
        
            
    <div
      class="ct-fast-fact-card__title"
    >
      
                  Fast Fact Title
              
    </div>
    
      
            


    <div
      class="ct-paragraph ct-theme-light ct-paragraph--large  ct-fast-fact-card__summary"
    >
      
    This is a summary of the fast fact.  
    </div>
          
  </div>
  

</div>
`;

exports[`Fast Fact Card Component renders with title click only when is_title_click is true 1`] = `
<div>
  



  <div
    class="ct-fast-fact-card ct-theme-light  "
  >
    
        
            
    <div
      class="ct-fast-fact-card__title"
    >
      
                  
      <a
        class="ct-fast-fact-card__title-link"
        href="https://example.com"
      >
        Fast Fact Title
      </a>
      
              
    </div>
    
      
            


    <div
      class="ct-paragraph ct-theme-light ct-paragraph--large  ct-fast-fact-card__summary"
    >
      
    This is a summary of the fast fact.  
    </div>
          
  </div>
  

</div>
`;
